Fix simple warnings
Organize imports
Obsolete APIs
Generic types
etc.