@@ -70,7 +70,7 @@ public class SFTPv3Client
 	OutputStream os;
 
 	int protocol_version = 0;
-	HashMap server_extensions = new HashMap();
+	HashMap<String, byte[]> server_extensions = new HashMap<String, byte[]>();
 
 	int next_request_id = 1000;
 
@@ -297,30 +297,30 @@ public class SFTPv3Client
 		{
 			if (debug != null)
 				debug.println("SSH_FILEXFER_ATTR_SIZE");
-			fa.size = new Long(tr.readUINT64());
+			fa.size = Long.valueOf(tr.readUINT64());
 		}
 
 		if ((flags & AttribFlags.SSH_FILEXFER_ATTR_V3_UIDGID) != 0)
 		{
 			if (debug != null)
 				debug.println("SSH_FILEXFER_ATTR_V3_UIDGID");
-			fa.uid = new Integer(tr.readUINT32());
-			fa.gid = new Integer(tr.readUINT32());
+			fa.uid = Integer.valueOf(tr.readUINT32());
+			fa.gid = Integer.valueOf(tr.readUINT32());
 		}
 
 		if ((flags & AttribFlags.SSH_FILEXFER_ATTR_PERMISSIONS) != 0)
 		{
 			if (debug != null)
 				debug.println("SSH_FILEXFER_ATTR_PERMISSIONS");
-			fa.permissions = new Integer(tr.readUINT32());
+			fa.permissions = Integer.valueOf(tr.readUINT32());
 		}
 
 		if ((flags & AttribFlags.SSH_FILEXFER_ATTR_V3_ACMODTIME) != 0)
 		{
 			if (debug != null)
 				debug.println("SSH_FILEXFER_ATTR_V3_ACMODTIME");
-			fa.atime = new Long(((long)tr.readUINT32()) & 0xffffffffl);
-			fa.mtime = new Long(((long)tr.readUINT32()) & 0xffffffffl);
+			fa.atime = Long.valueOf(((long)tr.readUINT32()) & 0xffffffffl);
+			fa.mtime = Long.valueOf(((long)tr.readUINT32()) & 0xffffffffl);
 
 		}
 
@@ -703,9 +703,9 @@ public class SFTPv3Client
 		throw new SFTPException(tr.readString(), errorCode);
 	}
 
-	private final Vector scanDirectory(byte[] handle) throws IOException
+	private final Vector<SFTPv3DirectoryEntry> scanDirectory(byte[] handle) throws IOException
 	{
-		Vector files = new Vector();
+		Vector<SFTPv3DirectoryEntry> files = new Vector<SFTPv3DirectoryEntry>();
 
 		while (true)
 		{
@@ -925,10 +925,10 @@ public class SFTPv3Client
 	 * @return A Vector containing {@link SFTPv3DirectoryEntry} objects.
 	 * @throws IOException
 	 */
-	public Vector ls(String dirName) throws IOException
+	public Vector<SFTPv3DirectoryEntry> ls(String dirName) throws IOException
 	{
 		byte[] handle = openDirectory(dirName);
-		Vector result = scanDirectory(handle);
+		Vector<SFTPv3DirectoryEntry> result = scanDirectory(handle);
 		closeHandle(handle);
 		return result;
 	}
